GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  Searching with grep -Fw for an empty string would not match an
  empty line. [bug present since "the beginning"]

  X{0,0} is implemented correctly.  It used to be a synonym of X{0,1}.
  [bug present since "the beginning"]

* Noteworthy changes in release 2.6.3 (2010-04-02) [stable]

** Bug fixes

  Searching with grep -F for an empty string in a multibyte locale
  would hang grep. [bug introduced in 2.6.2]

  PCRE support is once again detected on systems with <pcre/pcre.h>
  [bug introduced in 2.6.2]


* Noteworthy changes in release 2.6.2 (2010-03-29) [stable]

** Bug fixes

  grep -F no longer mistakenly reports a match when searching
  for an incomplete prefix of a multibyte character.
  [bug present since "the beginning"]

  grep -F no longer goes into an infinite loop when it finds a match for an
  incomplete (non-prefix of a) multibyte character.  [bug introduced in 2.6]

  Using any of the --include or --exclude* options would cause a NULL
  dereference.  [bugs introduced in 2.6]

** Build-related

  configure no longer relies on pkg-config to detect PCRE support.


* Noteworthy changes in release 2.6.1 (2010-03-25) [stable]

** Bug fixes

  Character classes could cause a segmentation fault if they included a
  multibyte character.  [bug introduced in 2.6]

  Character ranges would not work in single-byte character sets other
  than C (for example, ISO-8859-1 or KOI8-R) and some multi-byte locales.
  For example, this should print "1", but would find no match:
    $ echo 1 | env -i LC_COLLATE=en_US.UTF-8 grep '[0-9]'
  [bug introduced in 2.6]

  The output of grep was incorrect for whole-word (-w) matches if the
  patterns included a back-reference. [bug introduced in grep-2.5.2]

** Portability

  Avoid a link failure on Solaris 8.


* Noteworthy changes in release 2.6 (2010-03-23) [stable]

** Speed improvements
